gcc/testsuite/rust/rustc/ui/const-generics/unify_with_nested_expr.rs
#![feature(generic_const_exprs)]
#![allow(incomplete_features)]

fn foo<const N: usize>()
where
    [(); N + 1 + 1]:,
{
    bar();
// { dg-error ".E0284." "" { target *-*-* } .-1 }
}

fn bar<const N: usize>()
where
    [(); N + 1]:,
{
}

fn main() {}

